# perl_to_python

./: CHANGES_SUMMARY.md  FUTURE_ENHANCEMENTS.md  INSTALL_AND_USAGE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  post_process.py  pyproject.toml  setup.py  test_argv.py  test_argv_handling.py  test_converter.py  test_converter_new.py  test_import.py
docs/: POST_PROCESSING.md  README.md
examples/: programmatic_usage.py
input/: StringUtils.pm  add_numbers.pl  complex_example.pl  regex_pair_factors.pl  test1.pl  test_script.pl
output/: StringUtils.py  StringUtils_fixed.py  add_numbers_argv_test.py  add_numbers_fixed.py  add_numbers_new.py  complex_example.py  test_script_fixed.py  test_script_new.py
src/perl2python/: config_template.json  converter.py
src/perl2python.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_converter.py
tests/sample_perl/: hello_world.pl
