[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perl2python"
version = "0.1.0"
description = "An AI-powered tool for converting Perl code to Python"
readme = "docs/README.md"
authors = [
    {name = "Perl to Python Conversion Agent", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["perl", "python", "conversion", "migration", "code generation"]
requires-python = ">=3.6"
dependencies = [
    "typing;python_version<'3.7'",
]

[project.urls]
Documentation = "https://github.com/yourusername/perl2python/tree/main/docs"
Source = "https://github.com/yourusername/perl2python"
Tracker = "https://github.com/yourusername/perl2python/issues"

[project.scripts]
perl2python = "perl2python.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["perl2python"]